--- a/lang-of-dp/src/css.modules/NavigationBar.module.css
+++ b/lang-of-dp/src/css.modules/NavigationBar.module.css
@@ -1,12 +1,19 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Cabin', sans-serif;
+}
 
 .con{
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 img{
     width: 236px;
@@ -16,6 +23,7 @@ img{
     list-style: none;
     display: flex;
     gap: 30px;
+    width: fit-content;
 }
 li a{
     text-decoration: none;
